crates/yulgen/tests/snapshots/yulgen__abi_decode_component_address_mem_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::decode_component_bool(AbiDecodeLocation::Memory)"

---
function abi_decode_component_bool_mem(head_start, offset) -> return_val {
    let ptr := add(head_start, offset)
    return_val := mload(ptr)
    if iszero(is_left_padded(255, return_val)) { revert(0, 0) }
}
