crates/yulgen/tests/snapshots/yulgen__abi_decode_component_bytes_26_mem_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::decode_component_bytes(26, AbiDecodeLocation::Memory)"

---
function abi_decode_component_bytes_26_mem(head_start, head_offset) -> return_val, data_start_offset, data_end_offset {
    let head_ptr := add(head_start, head_offset)
    data_start_offset := mload(head_ptr)
    let data_start := add(head_start, data_start_offset)
    let bytes_size := mload(data_start)
    if iszero(eq(bytes_size, 26)) { revert_with_panic(153) }
    let data_size := add(bytes_size, 32)
    let padded_data_size := ceil32(data_size)
    data_end_offset := add(data_start_offset, padded_data_size)
    let end_word := mload(sub(add(head_start, data_end_offset), 32))
    let padding_size_bits := mul(sub(padded_data_size, data_size), 8)
    if iszero(is_right_padded(padding_size_bits, end_word)) { revert_with_panic(153) }
    return_val := mcopym(add(data_start, 32), sub(data_size, 32))
}
