crates/yulgen/tests/snapshots/yulgen__abi_decode_component_uint256_mem_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::decode_component_uint(32, AbiDecodeLocation::Memory)"

---
function abi_decode_component_uint256_mem(head_start, offset) -> return_val {
    let ptr := add(head_start, offset)
    return_val := mload(ptr)
    if iszero(is_left_padded(0, return_val)) { revert_with_panic(153) }
}
