crates/yulgen/tests/snapshots/yulgen__abi_encode_u256_address.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi::encode(vec![U256, Base :: Address])"

---
function abi_encode_u256_address(val_0, val_1) -> ptr {
    ptr := avail()
    pop(alloc_mstoren(val_0, 32))
    pop(alloc_mstoren(val_1, 32))
}
