crates/yulgen/tests/snapshots/yulgen__decode_data_name_string_mem_name.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_names::decode_data(&[FeString{max_size: 42,}], AbiDecodeLocation::Memory)"

---
abi_decode_data_string_42_mem
