crates/yulgen/tests/snapshots/yulgen__decode_data_name_u256_calldata_name.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_names::decode_data(&[U256], AbiDecodeLocation::Calldata)"

---
abi_decode_data_uint256_calldata
